clusters/home/unifi/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: unifi-controller
  namespace: unifi
  labels:
    app.kubernetes.io/name: unifi
spec:
  serviceName: unifi-controller
  selector:
    matchLabels:
      app.kubernetes.io/name: unifi
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: unifi
    spec:
      containers:
      - name: unifi-controller
        image: lscr.io/linuxserver/unifi-network-application:8.1.127-ls42
        imagePullPolicy: IfNotPresent
        ports:
          - name: device-comm
            containerPort: 8080
            protocol: TCP
          - name: stun
            containerPort: 3478
            protocol: UDP
          - name: default-console
            containerPort: 8443
            protocol: TCP
          - name: secure-redirect
            containerPort: 8843
            protocol: TCP
          - name: http-redirect
            containerPort: 8880
            protocol: TCP
          - name: speedtest
            containerPort: 6789
            protocol: TCP
          - name: unifi-disc
            containerPort: 10001
            protocol: UDP
          - name: unifi-disc-l2
            containerPort: 1900
            protocol: UDP
          - name: unifi-5514
            containerPort: 5514
            protocol: UDP
        resources:
          requests:
            cpu: "150m"
            memory: "1024Mi"
          limits:
            cpu: "512m"
            memory: "2048Mi"
        volumeMounts:
          - name: unifi-config
            mountPath: /config
      - name: unifi-db
        image: docker.io/mongo:7.0
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: unifi-mongo-data
            mountPath: /data/db
          - name: mongo-startup-script
            mountPath: /docker-entrypoint-initdb.d/init-mongo.js
            subPath: mongo-init
        ports:
          - name: mongo
            containerPort: 27017
            protocol: TCP
      volumes:
        - name: unifi-mongo-data
          nfs:
            server: 10.0.0.11 # TODO MAKE DNS?
            path: /mnt/unifi-mongo-db
        - name: unifi-config
          nfs:
            server: 10.0.0.11 # TODO MAKE DNS?
            path: /mnt/unifi-config
        - name: mongo-startup-script
          configMap:
            name: mongo-startup-script
