clusters/home/unifi/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-controller
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.104
  selector:
    app.kubernetes.io/name: unifi
  externalTrafficPolicy: Cluster
  ports:
    - name: device-comm
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: stun
      port: 3478
      protocol: UDP
      targetPort: 3478
    - name: default-console
      port: 8443
      protocol: TCP
      targetPort: 8443
    - name: secure-redirect
      port: 8843
      protocol: TCP
      targetPort: 8843
    - name: http-redirect
      port: 8880
      protocol: TCP
      targetPort: 8880
    - name: speedtest
      port: 6789
      protocol: TCP
      targetPort: 6789
    - name: unifi-disc
      port: 10001
      protocol: UDP
      targetPort: 10001
    - name: unifi-disc-l2
      port: 1900
      protocol: UDP
      targetPort: 1900
    - name: unifi-5514
      port: 5514
      protocol: UDP
      targetPort: 5514
