clusters/home/unifi/ingress-gw-routes.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: unifi
#   namespace: unifi
# spec:
#   type: ClusterIP
#   selector:
#     app.kubernetes.io/name: unifi
#   ports:
#     - port: 8843
#       targetPort: 8843
# ---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: unifi-controller
  namespace: unifi
spec:
  parentRefs:
  - name: web-ingress
    kind: Gateway
  rules:
  - backendRefs:
    - name: unifi-controller
      port: 8843
